--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 }
 
 .warning-text {
-  color: var(--text-default-warning) !important
+  color: var(--text-default-warning) !important;
 }
 
 .fr-card__detail.fr-icon-warning-fill {
